sandbox/output
PatientTest.java:9: error: cannot find symbol
        assertEquals(0, patient.clash(new ArrayList(codeine, prozac), 90));
                                                    ^
  symbol:   variable codeine
  location: class PatientTest
PatientTest.java:9: error: cannot find symbol
        assertEquals(0, patient.clash(new ArrayList(codeine, prozac), 90));
                                                             ^
  symbol:   variable prozac
  location: class PatientTest
PatientTest.java:9: error: cannot find symbol
        assertEquals(0, patient.clash(new ArrayList(codeine, prozac), 90));
                        ^
  symbol:   variable patient
  location: class PatientTest
3 errors
